# bellgrid

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
benchmarks/vs_handrolled/: README.md
benchmarks/vs_rl/: README.md
benchmarks/vs_tasmanian/: README.md
docs/: api.md  index.md  solvers.md  when_to_use.md
examples/: README.md
examples/01_merton/: README.md  merton.ipynb  merton.py
examples/02_carroll_deaton/: README.md  carroll_deaton.ipynb  carroll_deaton.py
examples/03_american_option/: README.md  american_option.ipynb  american_option.py
examples/04_lqg/: README.md  lqg.ipynb  lqg.py
examples/05_two_asset_merton/: two_asset_merton.ipynb  two_asset_merton.py
examples/06_regime_switching_option/: regime_switching_option.ipynb  regime_switching_option.py
examples/07_retirement_decision/: retirement_decision.ipynb  retirement_decision.py
examples/08_jump_diffusion_option/: jump_diffusion_option.ipynb  jump_diffusion_option.py
examples/09_lifecycle_planning/: lifecycle_planning.ipynb  lifecycle_planning.py  mortality.py  regimes.py  utility.py  wages.py
examples/10_hydropower/: hydropower.ipynb  hydropower.py
examples/11_liquidation/: liquidation.ipynb  liquidation.py
examples/12_bermudan_basket/: bermudan_basket.ipynb  bermudan_basket.py
src/bellgrid/: __init__.py  problem.py  simulate.py  solve.py
src/bellgrid/grids/: __init__.py  golden.py  regular.py  warped.py
src/bellgrid/interpolation/: __init__.py  multilinear.py
src/bellgrid/rl/: __init__.py  _setup.py  nets.py  pgrad.py  solver.py
src/bellgrid/shocks/: __init__.py  categorical.py  jump.py  lognormal.py  multivariate_normal.py  normal.py  uniform.py
src/bellgrid/solvers/: __init__.py  _common.py  backward_induction.py  ilqg.py  policy_iteration.py
tests/: README.md  test_american_option.py  test_boundary_with_markov_chain.py  test_callable_discount_and_next_state_reward.py  test_callable_discount_solver_paths.py  test_carroll_deaton.py  test_categorical.py  test_chunking_and_boundary.py  test_discrete_state.py  test_golden_search.py  test_grids.py  test_howard.py  test_interpolation.py  test_jump.py  test_lqg.py  test_markov_callable_combo.py  test_merton.py  test_multi_cont_action_bounds.py  test_policy_iteration.py  test_problem.py  test_rl_actor_critic.py  test_shocks.py  test_simulate.py  test_simulate_extensions.py  test_simulate_with_categorical_uniform.py  test_solver.py  test_three_markov_chains.py  test_uniform.py
