[project]
name = "bellgrid"
version = "0.0.0"
description = "GPU-native backward-induction MDP solver for continuous-state stochastic dynamic programs."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tom Barrett" }]
keywords = ["dynamic-programming", "bellman", "mdp", "backward-induction", "stochastic-control"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.8", "jupyter>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/tbb300/bellgrid"
Documentation = "https://github.com/tbb300/bellgrid/tree/main/docs"
Issues = "https://github.com/tbb300/bellgrid/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bellgrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
