[project]
name = "bellgrid"
version = "0.1.0a6"
description = "GPU solver for stochastic dynamic programs: exact backward induction plus a model-based neural solver for high dimensions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Tom Barrett" }]
keywords = ["dynamic-programming", "bellman", "mdp", "backward-induction", "stochastic-control", "actor-critic", "neural-dp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.4",
    "numpy>=1.26",
]

[project.optional-dependencies]
examples = ["matplotlib>=3.8", "jupyter>=1.0", "jupytext>=1.16"]
dev = ["pytest>=8.0", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/tbb300/bellgrid"
Documentation = "https://github.com/tbb300/bellgrid/tree/main/docs"
Issues = "https://github.com/tbb300/bellgrid/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bellgrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Pull torch from the PyTorch CUDA 12.6 index on Linux x86_64, so installs
# on machines with a CUDA 12.x driver get a GPU-capable torch out of the
# box. Other platforms fall through to the default PyPI index (CPU-only
# torch).
[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", marker = "platform_system == 'Linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
